[package]
name = "excavator"
version = "0.1.0"
authors = ["vabi <vabian.lenhardt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
paho-mqtt = {version="0.5"}
log = {version="0.4.11"}
env_logger = {version="0.7.1"}